--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,3 +56,31 @@ jobs:
             docker rm instagram-server || true
             docker pull ${{ steps.login-ecr.outputs.registry }}/instagram-server:latest
             docker run -d --name instagram-server -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/instagram-server:latest
+
+      - name: Setup Kustomize
+        uses: imranismail/setup-kustomize@v1
+    
+      - name: Checkout kustomize repository
+        uses: actions/checkout@v2
+        with:
+          repository: $GITHUB_USERNAME/k8s-manifest-repo
+          ref: master
+          token: \${{ secrets.ACTION_TOKEN }}
+          path: k8s-manifest-repo
+    
+      - name: Update Kubernetes resources
+        run: |
+          echo \${{ steps.login-ecr.outputs.registry }}
+          echo \${{ steps.image-info.outputs.ecr_repository }}
+          echo \${{ steps.image-info.outputs.image_tag }}
+          cd k8s-manifest-repo/overlays/dev/
+          kustomize edit set image \${{ steps.login-ecr.outputs.registry}}/\${{ steps.image-info.outputs.ecr_repository }}=\${{ steps.login-ecr.outputs.registry}}/\${{ steps.image-info.outputs.ecr_repository }}:\${{ steps.image-info.outputs.image_tag }}
+          cat kustomization.yaml
+    
+      - name: Commit files
+        run: |
+          cd k8s-manifest-repo
+          git config --global user.email "oilehot0910@naver.com"
+          git config --global user.name "Intaewoo"
+          git commit -am "Update image tag"
+          git push -u origin master
