--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,10 @@ jobs:
       - name: ECR에 로그인하기
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-        
+      
+      - name: Check Docker Version
+        run: docker version
+       
       - name: Docker 이미지 생성
         run: docker build -t instagram-server .
 
