--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           repository: InTaewoo/k8s-manifest-repo
           ref: master
-          token: \${{ secrets.ACTION_TOKEN }}
+          token: ${{ secrets.ACTION_TOKEN }}
           path: k8s-manifest-repo
     
       - name: Update Kubernetes resources
