--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,8 +92,8 @@ jobs:
       - name: Commit files
         run: |
           cd k8s-manifest-repo
-          pwd
           git config --global user.email "oilehot0910@naver.com"
           git config --global user.name "Intaewoo"
+          git add .
           git commit -m "Update image tag"
           git push -u origin master
