--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 images:
 - name: 831926614723.dkr.ecr.ap-northeast-2.amazonaws.com/instagram-server
   newName: 831926614723.dkr.ecr.ap-northeast-2.amazonaws.com/instagram-server
-  newTag: 68ebe7dc
+  newTag: "09654089"
 resources:
 - ../../base
 patchesStrategicMerge:
