--- a/base/frontend-deployment.yaml
+++ b/base/frontend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-frontend
-  namespace: default
+  namespace: argocd
 spec:
   replicas: 3
   selector:
